feat: remove file info endpoint
