# openapi.json
@@ -814,57 +814,6 @@
         "deprecated": false
       }
     },
-    "/api/v1/files/{file_id}": {
-      "get": {
-        "tags": ["file"],
-        "summary": "FileInfo",
-        "operationId": "ApiV1FilesFileIdFileInfo",
-        "parameters": [
-          {
-            "name": "file_id",
-            "in": "path",
-            "schema": { "type": "string", "format": "uuid" },
-            "required": true,
-            "deprecated": false
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Request fulfilled, document follows",
-            "headers": {},
-            "content": {
-              "application/x-msgpack": {
-                "schema": { "$ref": "#/components/schemas/FileInfo" }
-              }
-            }
-          },
-          "400": {
-            "description": "Bad request syntax or unsupported method",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "properties": {
-                    "status_code": { "type": "integer" },
-                    "detail": { "type": "string" },
-                    "extra": {
-                      "additionalProperties": {},
-                      "type": ["null", "object", "array"]
-                    }
-                  },
-                  "type": "object",
-                  "required": ["detail", "status_code"],
-                  "description": "Validation Exception",
-                  "examples": [
-                    { "status_code": 400, "detail": "Bad Request", "extra": {} }
-                  ]
-                }
-              }
-            }
-          }
-        },
-        "deprecated": false
-      }
-    },
     "/api/v1/files/upload/initiate": {
       "post": {
         "tags": ["file"],
@@ -952,7 +901,7 @@
             "pattern": "^[a-f0-9]{8}-[a-f0-9]{4}-4[a-f0-9]{3}-[89ab][a-f0-9]{3}-[a-f0-9]{12}$",
             "examples": ["123e4567-e89b-42d3-a456-426614174000"]
           },
-          "name": { "type": "string", "maxLength": 255 },
+          "name": { "type": "string", "maxLength": 255, "minLength": 1 },
           "size": { "type": "integer", "exclusiveMinimum": 0.0 },
           "uploaded_at": { "type": "string", "format": "date-time" }
         },
@@ -986,7 +935,7 @@
       },
       "InitiateUpload": {
         "properties": {
-          "name": { "type": "string", "maxLength": 255 },
+          "name": { "type": "string", "maxLength": 255, "minLength": 1 },
           "size": { "type": "integer", "exclusiveMinimum": 0.0 }
         },
         "type": "object",
